--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ img[src="eleimage.png"] {
   width: 50px;
 }
 
+.icon:hover {
+  cursor: pointer;
+}
+
 .info {
   font-weight: bold;
   font-size: 16px;
@@ -62,6 +66,10 @@ li {
   text-align: center;
 }
 
+li:hover {
+  cursor: pointer;
+}
+
 .next {
   display: none;
   border: .1em solid #000;
@@ -73,4 +81,8 @@ li {
   margin: auto;
   text-align: center;
   vertical-align: middle;
+}
+
+.next:hover {
+  cursor: pointer;
 }
